--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FactNumbers"
         tools:targetApi="31">
-        <activity android:name=".MainActivity"
+        <activity android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.FactNumbers">
             <intent-filter>
